Fix icon stretching issue

--- a/src/pages/SearchPage/SearchPage.css
+++ b/src/pages/SearchPage/SearchPage.css
@@ -34,6 +34,8 @@
 
 .text-container {
   display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   flex-direction: column;
   will-change: transform;
@@ -41,7 +43,10 @@
 
 .item-icon {
   position: relative;
-  height: 60px;
+  max-height: 60px;
+  max-width: 60px;
+  height: auto;
+  width: auto;
 }
 
 .item-text {
